[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "rich>=13.9.4",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "yt-dlp>=2025.1.26",
    "pyopenssl>=25.0.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "slack-sdk>=3.34.0",
]
